[project]
authors = [{name = "iboIPS", email = "74272983+iboIPS@users.noreply.github.com"}]
dependencies = []
name = "path-planner"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
path_planner = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = "==2.2.6"
pygame = "==2.6.1"
pillow = ">=12.0.0,<13"
tk = ">=8.6.13,<9"
